--- a/.air.toml
+++ b/.air.toml
@@ -7,7 +7,7 @@ tmp_dir = "tmp"
   bin = "./tmp/i9chat"
   cmd = "go build -o ./tmp/i9chat ."
   delay = 1000
-  exclude_dir = ["assets", "tmp", "vendor", "testdata"]
+  exclude_dir = ["assets", "tmp", "vendor", "testdata", "tests"]
   exclude_file = []
   exclude_regex = ["_test.go"]
   exclude_unchanged = false
