user models, user service, user controllers and dependent packages revised

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
-.vscode/
-.env
-tmp/
-.air.toml
-i9apps-storage.json
-plannotes.md
-.bashrc
+/**/.vscode/
+/**/.env
+/**/tmp/
+/**/.air.toml
+/**/i9apps-storage.json
+/**/plannotes.md
+/**/.bashrc
