--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -13,10 +13,6 @@ jobs:
           - '7687:7687'
         env:
           NEO4J_AUTH: "neo4j/pa@sw$*d"
-      broker:
-        image: 'apache/kafka:latest'
-        ports:
-          - '9092:9092'
     strategy:
       matrix:
         go-version:
@@ -24,6 +20,10 @@ jobs:
     steps:
       - name: Fetch Repository
         uses: actions/checkout@v4
+      - name: Run Kafka KRaft Broker
+        uses: spicyparrot/kafka-kraft-action@v1.1.0
+        with:
+          kafka-version: "3.7.0"
       - name: Install Go
         uses: actions/setup-go@v5
         with:
