--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -24,7 +24,7 @@ jobs:
         uses: spicyparrot/kafka-kraft-action@v1.1.0
         with:
           kafka-version: "3.7.0"
-          kafka-topics: "i9chat-user-jeffyboy-topic,1,i9chat-user-louislitt-topic,1"
+          kafka-topics: ${{ secrets.KAFKA_TOPICS }}
       - name: Install Go
         uses: actions/setup-go@v5
         with:
