--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -24,8 +24,6 @@ jobs:
     steps:
       - name: Fetch Repository
         uses: actions/checkout@v4
-      - name: Start kafka
-        run: docker run -d -p 9092:9092 --name broker apache/kafka:latest
       - name: Install Go
         uses: actions/setup-go@v5
         with:
@@ -38,7 +36,7 @@ jobs:
           NEO4J_URL: "neo4j://localhost"
           NEO4J_USER: neo4j
           NEO4J_PASSWORD: "pa@sw$*d"
-          KAFKA_BROKER_ADDRESS: "localhost:9092"
+          KAFKA_BROKER_ADDRESS: "PLAINTEXT://localhost:9092"
           AUTH_JWT_SECRET: ${{ secrets.AUTH_JWT_SECRET }}
           MAILING_EMAIL: ${{ secrets.MAILING_EMAIL }}
           MAILING_PASSWORD: ${{ secrets.MAILING_PASSWORD }}
