--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -13,10 +13,28 @@ jobs:
           - '7687:7687'
         env:
           NEO4J_AUTH: "neo4j/pa@sw$*d"
-      broker:
-        image: 'apache/kafka:latest'
+
+      zookeeper:
+        image: confluentinc/cp-zookeeper:latest
         ports:
-          - '9092:9092'
+          - 2181:2181
+        env:
+          ZOOKEEPER_CLIENT_PORT: 2181
+
+      kafka:
+        image: confluentinc/cp-kafka:latest
+        ports:
+          - 9092:9092
+        env:
+          KAFKA_BROKER_ID: 1
+          KAFKA_ZOOKEEPER_CONNECT: localhost:2181
+          KAFKA_LISTENERS: PLAINTEXT://0.0.0.0:9092
+          KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://localhost:9092
+          KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
+          KAFKA_TRANSACTION_STATE_LOG_MIN_ISR: 1
+          KAFKA_TRANSACTION_STATE_LOG_REPLICATION_FACTOR: 1
+        options: --health-cmd "kafka-topics --bootstrap-server localhost:9092 --list || exit 1" --health-interval 10s --health-timeout 5s --health-retries 5
+
     strategy:
       matrix:
         go-version:
@@ -24,6 +42,14 @@ jobs:
     steps:
       - name: Fetch Repository
         uses: actions/checkout@v4
+      - name: Wait for Kafka to be ready
+        run: |
+          for i in {1..30}; do
+            nc -z localhost 9092 && echo "Kafka is up" && exit 0
+            echo "Waiting for Kafka..."
+            sleep 2
+          done
+          echo "Kafka did not start in time" && exit 1
       - name: Install Go
         uses: actions/setup-go@v5
         with:
