--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -15,14 +15,12 @@ jobs:
           NEO4J_AUTH: "neo4j/pa@sw$*d"
 
       zookeeper:
-        image: confluentinc/cp-zookeeper:latest
+        image: zookeeper:latest
         ports:
           - 2181:2181
-        env:
-          ZOOKEEPER_CLIENT_PORT: 2181
 
       kafka:
-        image: confluentinc/cp-kafka:latest
+        image: apacke/kafka:latest
         ports:
           - 9092:9092
         env:
