correct kafka setup

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -20,7 +20,7 @@ jobs:
           - 2181:2181
 
       kafka:
-        image: apacke/kafka:latest
+        image: apache/kafka:latest
         ports:
           - 9092:9092
 
