--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -28,9 +28,10 @@ jobs:
         uses: actions/checkout@v4
       - name: Create kafka topics
         run: |
-          docker exec --workdir /opt/kafka/bin/ -it broker sh
-          ./kafka-topics.sh --bootstrap-server localhost:9092 --create --topic i9chat-user-louislitt-topic
-          ./kafka-topics.sh --bootstrap-server localhost:9092 --create --topic i9chat-user-jeffyboy-topic
+          cd /opt/kafka/bin;
+          ./kafka-topics.sh --bootstrap-server localhost:9092 --create --topic i9chat-user-louislitt-topic;
+          ./kafka-topics.sh --bootstrap-server localhost:9092 --create --topic i9chat-user-jeffyboy-topic;
+          cd -;
       - name: Wait for Kafka to be ready
         run: |
           for i in {1..30}; do
