--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -14,7 +14,7 @@ jobs:
         env:
           NEO4J_AUTH: "neo4j/pa@sw$*d"
 
-      broker:
+      kafka:
         image: apache/kafka:latest
         ports:
           - 9092:9092
@@ -26,12 +26,13 @@ jobs:
     steps:
       - name: Fetch Repository
         uses: actions/checkout@v4
-      - name: Create kafka topics
+
+      - name: Install Kafka CLI
         run: |
-          cd /opt/kafka/bin;
-          ./kafka-topics.sh --bootstrap-server localhost:9092 --create --topic i9chat-user-louislitt-topic;
-          ./kafka-topics.sh --bootstrap-server localhost:9092 --create --topic i9chat-user-jeffyboy-topic;
-          cd -;
+          wget -qO- https://downloads.apache.org/kafka/3.6.0/kafka_2.13-3.6.0.tgz | tar xvz
+          mv kafka_2.13-3.6.0 /opt/kafka
+          echo "export PATH=/opt/kafka/bin:$PATH" >> $GITHUB_ENV
+
       - name: Wait for Kafka to be ready
         run: |
           for i in {1..30}; do
@@ -40,12 +41,20 @@ jobs:
             sleep 2
           done
           echo "Kafka did not start in time" && exit 1
+
+      - name: Create kafka topics
+        run: |
+          kafka-topics.sh --bootstrap-server localhost:9092 --create --topic i9chat-user-louislitt-topic;
+          kafka-topics.sh --bootstrap-server localhost:9092 --create --topic i9chat-user-jeffyboy-topic;
+
       - name: Install Go
         uses: actions/setup-go@v5
         with:
           go-version: '${{ matrix.go-version }}'
+
       - name: Build server
         run: go build -o i9chat_server
+
       - name: Start server
         run: ./i9chat_server &
         env:
@@ -61,6 +70,7 @@ jobs:
           SERVER_HOST: ${{ vars.SERVER_HOST }}
           DUMMY_VERF_TOKEN: ${{ secrets.DUMMY_VERF_TOKEN }}
           GO_ENV: test
+
       - name: Run Test
         run: sleep 5; cd ./tests && go test ./... -v -race
         env:
