--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -25,7 +25,7 @@ jobs:
       - name: Start kafka broker
         uses: spicyparrot/kafka-kraft-action@v1.1.0
         with:
-          kafka-version: "latest"
+          kafka-version: "3.7.0"
           kafka-topics: ${{ secrets.KAFKA_TOPICS }}
 
       - name: Install Go
