--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -13,6 +13,11 @@ jobs:
           - '7687:7687'
         env:
           NEO4J_AUTH: "neo4j/pa@sw$*d"
+
+      kafka-kraft:
+        image: 'confluentinc/confluent-local:latest'
+        ports:
+          - 9092:9092
       
     strategy:
       matrix:
@@ -22,11 +27,11 @@ jobs:
       - name: Fetch Repository
         uses: actions/checkout@v4
 
-      - name: Start kafka broker
-        uses: spicyparrot/kafka-kraft-action@v1.1.0
-        with:
-          kafka-version: "3.7.0"
-          kafka-topics: ${{ secrets.KAFKA_TOPICS }}
+      # - name: Start kafka broker
+      #   uses: spicyparrot/kafka-kraft-action@v1.1.0
+      #   with:
+      #     kafka-version: "3.7.0"
+      #     kafka-topics: ${{ secrets.KAFKA_TOPICS }}
 
       - name: Install Go
         uses: actions/setup-go@v5
